update-manager is now using python3 as an interpreter, so fix these up to actually be python3 packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -95,6 +95,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   [ Steve Langasek ]
   * tests/test_country_mirror.py: the test suite shouldn't fail if $LANG
     isn't set in the environment.
+  * update-manager is now using python3 as an interpreter, so fix these up
+    to actually be python3 packages.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
