APTURL TESTING ONLY
Moved UpdateManager/backend to the python*-update-manager packages

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.163) UNRELEASED; urgency=low
+update-manager (1:0.163~ppa6) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Isolate tests from local configuration in
@@ -79,7 +79,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     removed from here into its own separate branch.
   * Merge the temporary Python 3 sprint branch back into trunk, and close
     the py3 sprint branch.
-  
+  * Moved UpdateManager/backend to the python*-update-manager packages
+
   [ Michael Vogt ]
   * UpdateManager/GtkProgress.py:
     - fix python-apt 0.8 API crash
