Switch #! lines over to python3, apart from dist-upgrader which needs to stay as Python 2 for a while longer (and have some special arrangement for running with Python 3 for upgrades from >= quantal).

--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,9 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     - Tolerate SyntaxError from attempting to import NvidiaDetector, until
       such time as a complete ubuntu-drivers-common Python 3 port is in the
       archive.
+  * Switch #! lines over to python3, apart from dist-upgrader which needs to
+    stay as Python 2 for a while longer (and have some special arrangement
+    for running with Python 3 for upgrades from >= quantal).
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
