Run tests under both Python 2 and 3.

--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Switch #! lines over to python3, apart from dist-upgrader which needs to
     stay as Python 2 for a while longer (and have some special arrangement
     for running with Python 3 for upgrades from >= quantal).
+  * Run tests under both Python 2 and 3.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
