--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.163) UNRELEASED; urgency=low
+update-manager (1:0.163) quantal; urgency=low
 
   [ Colin Watson ]
   * Isolate tests from local configuration in
@@ -104,7 +104,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * update-manager is now using python3 as an interpreter, so fix these up
     to actually be python3 packages.
 
- -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
+ -- Colin Watson <cjwatson@ubuntu.com>  Thu, 14 Jun 2012 00:57:42 +0100
 
 update-manager (1:0.162) quantal; urgency=low
 
