--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.164) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeApport.py: ensure package install failures are
+    tagged dist-upgrade
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 18 Jun 2012 11:41:39 -0700
+
 update-manager (1:0.163) quantal; urgency=low
 
   [ Colin Watson ]
