DistUpgrade/NvidiaDetector, debian/control: Update symlink to Python 3 version, available as of ubuntu-drivers-common 1:0.2.55.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ update-manager (1:0.164) UNRELEASED; urgency=low
   * UpdateManager/UpdateManager.py: check for None type from
     get_last_update_minutes (LP: #1013325)
 
+  [ Colin Watson ]
+  * DistUpgrade/NvidiaDetector, debian/control: Update symlink to Python 3
+    version, available as of ubuntu-drivers-common 1:0.2.55.
+
  -- Brian Murray <brian@ubuntu.com>  Tue, 19 Jun 2012 15:34:45 -0700
 
 update-manager (1:0.163) quantal; urgency=low
