debian/rules: Make sure to run setup.py with the default python3 last, so that scripts get correct #! lines.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ update-manager (1:0.164) UNRELEASED; urgency=low
   [ Colin Watson ]
   * DistUpgrade/NvidiaDetector, debian/control: Update symlink to Python 3
     version, available as of ubuntu-drivers-common 1:0.2.55.
+  * debian/rules: Make sure to run setup.py with the default python3 last,
+    so that scripts get correct #! lines.
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 19 Jun 2012 15:34:45 -0700
 
