Flag for release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.164) UNRELEASED; urgency=low
+update-manager (1:0.164) quantal; urgency=low
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: ensure package install failures are
@@ -28,7 +28,7 @@ update-manager (1:0.164) UNRELEASED; urgency=low
     - Add sleep between Python 2 and Python 3 invocation of tests under
       xvfb-run, otherwise I get crashes where xvfb doesn't come up.
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 19 Jun 2012 15:34:45 -0700
+ -- Barry Warsaw <barry@ubuntu.com>  Thu, 21 Jun 2012 20:42:23 -0400
 
 update-manager (1:0.163) quantal; urgency=low
 
