update debian/changelog and fix a typo in it

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,19 +1,8 @@
-ubntu-release-upgrader (1:0.166) quantal; urgency=low
+ubuntu-release-upgrader (1:0.165) quantal; urgency=low
 
   * Rename source package, split upgrade bits out of update-manager
 
  -- Michael Terry <mterry@ubuntu.com>  Mon, 25 Jun 2012 12:10:31 -0400
-
-update-manager (1:0.165) UNRELEASED; urgency=low
-
-  [ Michael Terry ]
-  * Implementation of "update on start" feature from spec
-    https://wiki.ubuntu.com/SoftwareUpdates
-  * Use a single main window that changes instead of having modal dialogs
-  * Implement several special-purpose dialogs like "No updates" or
-    "Dist upgrade needed" accordingn to the above spec
-
- -- Barry Warsaw <barry@ubuntu.com>  Mon, 25 Jun 2012 11:29:18 -0400
 
 update-manager (1:0.164) quantal; urgency=low
 
