Fix release upgrade tarball to include some UpdateManager that it may need during upgrade.  LP: #1020462

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.166) quantal; urgency=low
+
+  * Fix release upgrade tarball to include some UpdateManager that it
+    may need during upgrade.  LP: #1020462
+
+ -- Michael Terry <mterry@ubuntu.com>  Fri, 06 Jul 2012 09:25:03 -0400
+
 ubuntu-release-upgrader (1:0.165) quantal-proposed; urgency=low
 
   * Rename source package, split upgrade bits out of update-manager
