Build-Depend on python3-update-manager so its code is available when the dist upgrade tarball is created.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.167) quantal; urgency=low
+
+  * Build-Depend on python3-update-manager so its code is available when
+    the dist upgrade tarball is created.
+
+ -- Michael Terry <mterry@ubuntu.com>  Fri, 06 Jul 2012 09:48:47 -0400
+
 ubuntu-release-upgrader (1:0.166) quantal; urgency=low
 
   * Fix release upgrade tarball to include some UpdateManager that it
