Add *.cfg files back to the release tarball.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.168) quantal; urgency=low
+
+  * Add *.cfg files back to the release tarball.
+
+ -- Michael Terry <mterry@ubuntu.com>  Fri, 06 Jul 2012 13:55:51 -0400
+
 ubuntu-release-upgrader (1:0.167) quantal; urgency=low
 
   * Build-Depend on python3-update-manager so its code is available when
