Add replaces/breaks onto old update-manager-kde

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.169) quantal; urgency=low
+
+  * Add replaces/breaks onto old update-manager-kde
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 09 Jul 2012 15:28:12 +0100
+
 ubuntu-release-upgrader (1:0.168) quantal; urgency=low
 
   * Add *.cfg files back to the release tarball.
