--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.170) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeMain.py: call clone.save_state with
+    scrub_sources set so that VarLogDistUpgradeAptclonesystemstate can be
+    included in bug reports again
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 03 Jul 2012 14:03:31 -0700
+
 ubuntu-release-upgrader (1:0.169) quantal; urgency=low
 
   * Add replaces/breaks onto old update-manager-kde
