Declare Breaks/Replaces from python3-distupgrade to old versions of python3-update-manager (LP: #1020229).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 ubuntu-release-upgrader (1:0.170) UNRELEASED; urgency=low
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeMain.py: call clone.save_state with
     scrub_sources set so that VarLogDistUpgradeAptclonesystemstate can be
     included in bug reports again
+
+  [ Colin Watson ]
+  * Declare Breaks/Replaces from python3-distupgrade to old versions of
+    python3-update-manager (LP: #1020229).
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 03 Jul 2012 14:03:31 -0700
 
