--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.170) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.170) quantal; urgency=low
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeMain.py: call clone.save_state with
@@ -13,7 +13,7 @@ ubuntu-release-upgrader (1:0.170) UNRELEASED; urgency=low
   * data/release-upgrades:
     - set release upgrades default back to "normal" instead of "lts"
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 03 Jul 2012 14:03:31 -0700
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 10 Jul 2012 11:50:11 +0100
 
 ubuntu-release-upgrader (1:0.169) quantal; urgency=low
 
