Depend on python3-mock for DEP-8 tests.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.171) UNRELEASED; urgency=low
+
+  * Depend on python3-mock for DEP-8 tests.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 10 Jul 2012 17:08:14 +0100
+
 ubuntu-release-upgrader (1:0.170) quantal; urgency=low
 
   [ Brian Murray ]
