* debian/python3-distupgrade.links:   - Add links to janitor and NvidiaDetector modules as the code expects     (LP: #1023594)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 ubuntu-release-upgrader (1:0.171) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Depend on python3-mock for DEP-8 tests.
+
+  [ Michael Terry ]
+  * debian/python3-distupgrade.links:
+    - Add links to janitor and NvidiaDetector modules as the code expects
+      (LP: #1023594)
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 10 Jul 2012 17:08:14 +0100
 
