--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.171) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.172) quantal; urgency=low
 
   [ Colin Watson ]
   * Depend on python3-mock for DEP-8 tests.
@@ -8,7 +8,7 @@ ubuntu-release-upgrader (1:0.171) UNRELEASED; urgency=low
     - Add links to janitor and NvidiaDetector modules as the code expects
       (LP: #1023594)
 
- -- Colin Watson <cjwatson@ubuntu.com>  Tue, 10 Jul 2012 17:08:14 +0100
+ -- Michael Terry <mterry@ubuntu.com>  Mon, 16 Jul 2012 10:14:02 -0400
 
 ubuntu-release-upgrader (1:0.170) quantal; urgency=low
 
