--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:0.173) UNRELEASED; urgency=low
+
+  * tests/test_sources_list.py:
+    - Skip mirror test if the mirror is unreachable
+    - Use US mirror instead of DE mirror because the US one happens to
+      be reachable inside the data center where the Jenkins automatic
+      test are run.
+
+ -- Michael Terry <mterry@ubuntu.com>  Mon, 23 Jul 2012 11:04:01 -0400
+
 ubuntu-release-upgrader (1:0.172) quantal; urgency=low
 
   [ Colin Watson ]
