--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-ubuntu-release-upgrader (1:0.173) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.173) quantal; urgency=low
 
   * tests/test_sources_list.py:
     - Skip mirror test if the mirror is unreachable
     - Use US mirror instead of DE mirror because the US one happens to
       be reachable inside the data center where the Jenkins automatic
       test are run.
+  * DistUpgrade/build-tarball.sh:
+    - Include .ui files in the tarball too, they got accidentally dropped
+      by me in the big code reshuffle (LP: #1026067)
 
  -- Michael Terry <mterry@ubuntu.com>  Mon, 23 Jul 2012 11:04:01 -0400
 
