--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.174) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeApport.py: use a whitelist to ensure that only
+    specified files are gathered when creating an apport crash report
+    (LP: #1004503)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jul 2012 12:06:06 -0700
+
 ubuntu-release-upgrader (1:0.173) quantal; urgency=low
 
   * tests/test_sources_list.py:
