--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.174) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.174) quantal-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeApport.py: use a whitelist to ensure that only
     specified files are gathered when creating an apport crash report
