add unity_support_test as a upgrader quirk

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.175) UNRELEASED; urgency=low
+
+  * add unity_support_test as a upgrader quirk
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Aug 2012 16:47:25 +0200
+
 ubuntu-release-upgrader (1:0.174) quantal-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeApport.py: use a whitelist to ensure that only
