--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.175) quantal; urgency=low
+
+  * Fix removal_blacklist to blacklist "^screen$" instead of "screen".
+    This fixes cases where the upgrade would fail because of a package
+    containing "screen" being removed. (LP: #1029531)
+
+ -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 08 Aug 2012 17:57:36 -0400
+
 ubuntu-release-upgrader (1:0.174) quantal-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeApport.py: use a whitelist to ensure that only
