--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.176) quantal; urgency=low
+
+  * Use LANG=C.UTF-8 to prevent a python crash when running setup.py with
+    an uploader name containing utf-8 on buildds using LANG=C.
+
+ -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 08 Aug 2012 18:55:01 -0400
+
 ubuntu-release-upgrader (1:0.175) quantal; urgency=low
 
   * Fix removal_blacklist to blacklist "^screen$" instead of "screen".
