--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.177) quantal; urgency=low
+
+  * Apparently the buildds also have LC_ALL set to C, so the previous upload
+    wasn't enough to workaround the problem. This time override both LANG
+    and LC_ALL.
+
+ -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 08 Aug 2012 19:20:59 -0400
+
 ubuntu-release-upgrader (1:0.176) quantal; urgency=low
 
   * Use LANG=C.UTF-8 to prevent a python crash when running setup.py with
