[ Jonathan Riddell ] Remove kdm and xsettings-kde

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-ubuntu-release-upgrader (1:0.178) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.178) quantal; urgency=low
 
+  [ Michael Vogt ]
   * add unity_support_test as a upgrader quirk (LP: #1035261)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Aug 2012 16:54:36 +0200
+  [ Jonathan Riddell ]
+  * Remove kdm and xsettings-kde
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 10 Aug 2012 16:54:36 +0200
 
 ubuntu-release-upgrader (1:0.177) quantal; urgency=low
 
