--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.179) UNRELEASED; urgency=low
+
+  * include the gtkbuilder/ dir again in the tarball to fix
+    GUI upgrades
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Aug 2012 10:53:55 +0200
+
 ubuntu-release-upgrader (1:0.178) quantal; urgency=low
 
   [ Michael Vogt ]
