--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-ubuntu-release-upgrader (1:0.179) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.179) quantal; urgency=low
 
   * include the gtkbuilder/ dir again in the tarball to fix
-    GUI upgrades
+    GUI upgrades (LP: #1043696)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Aug 2012 10:53:55 +0200
 
