drop "unity-2d" from removal blacklist

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.180) UNRELEASEDquantal; urgency=low
+
+  * drop "unity-2d" from removal blacklist
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 31 Aug 2012 14:51:51 +0200
+
 ubuntu-release-upgrader (1:0.179) quantal; urgency=low
 
   * include the gtkbuilder/ dir again in the tarball to fix
