--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.180) UNRELEASEDquantal; urgency=low
+ubuntu-release-upgrader (1:0.180) quantal; urgency=low
 
   * drop "unity-2d" from removal blacklist
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 31 Aug 2012 14:51:51 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Sep 2012 10:01:45 +0200
 
 ubuntu-release-upgrader (1:0.179) quantal; urgency=low
 
