DistUpgrade/DistUpgradeController.py: Guard against UnboundLocalError in doDistUpgradeFetching.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.181) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py: Guard against UnboundLocalError in
+    doDistUpgradeFetching.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Sep 2012 10:11:48 +0100
+
 ubuntu-release-upgrader (1:0.180) quantal; urgency=low
 
   * drop "unity-2d" from removal blacklist
