DistUpgrade/DistUpgradeController.py: properly handle source entries with unicode comments in them (LP: #1039484)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ ubuntu-release-upgrader (1:0.181) UNRELEASED; urgency=low
   [ Brian Murray ]
   * ensure that apt-clone system state is included in bug reports filed by
     apport
+  * DistUpgrade/DistUpgradeController.py: properly handle source entries with
+    unicode comments in them (LP: #1039484)
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 27 Sep 2012 09:04:36 -0700
 
