--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.181) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.181) quantal; urgency=low
 
   [ Colin Watson ]
   * DistUpgrade/DistUpgradeController.py: Guard against UnboundLocalError in
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:0.181) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py: properly handle source entries with
     unicode comments in them (LP: #1039484)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 27 Sep 2012 09:04:36 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 27 Sep 2012 09:31:58 -0700
 
 ubuntu-release-upgrader (1:0.180) quantal; urgency=low
 
