--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.181ubuntu1) UNRELEASED; urgency=low
+
+  * Do not try to add apt-clone system state if it does not exist 
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 28 Sep 2012 11:46:48 -0700
+
 ubuntu-release-upgrader (1:0.181) quantal; urgency=low
 
   [ Colin Watson ]
