fix version number

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.181ubuntu1) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.182) UNRELEASED; urgency=low
 
   * Do not try to add apt-clone system state if it does not exist 
 
