--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-ubuntu-release-upgrader (1:0.182) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.182) quantal; urgency=low
 
-  * Do not try to add apt-clone system state if it does not exist 
+  * source_ubuntu_release_upgrader.py: Do not try to add apt-clone system
+    state if it does not exist 
+  * DistUpgradeApport.py: handle the case where python-apport is not installed
+    (LP: #1059403)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 28 Sep 2012 11:46:48 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 01 Oct 2012 12:56:39 -0700
 
 ubuntu-release-upgrader (1:0.181) quantal; urgency=low
 
