--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.183) UNRELEASED; urgency=low
+
+  * debian/ubuntu-release-upgrader-core.preinst: modify
+    /etc/dist-upgrader/release-upgrades to use Prompt instead of prompt
+    thereby avoiding a conffile prompt (LP: #1045579)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 01 Oct 2012 17:24:50 -0700
+
 ubuntu-release-upgrader (1:0.182) quantal; urgency=low
 
   * source_ubuntu_release_upgrader.py: Do not try to add apt-clone system
