--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.184) UNRELEASED; urgency=low
+
+  * Decode the output of apt_pkg.size_to_str() if necessary when
+    substituting it into Unicode strings (LP: #1031882).
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 02 Oct 2012 15:37:43 +0100
+
 ubuntu-release-upgrader (1:0.183) quantal; urgency=low
 
   * debian/ubuntu-release-upgrader-core.preinst: modify
