--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.184) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.184) quantal; urgency=low
 
   * Decode the output of apt_pkg.size_to_str() if necessary when
     substituting it into Unicode strings (LP: #1031882).
@@ -7,7 +7,7 @@ ubuntu-release-upgrader (1:0.184) UNRELEASED; urgency=low
     than whatever happens to be in /etc/apt/trusted.gpg on the system used
     to build the source package.
 
- -- Colin Watson <cjwatson@ubuntu.com>  Tue, 02 Oct 2012 15:37:43 +0100
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 02 Oct 2012 16:09:02 +0100
 
 ubuntu-release-upgrader (1:0.183) quantal; urgency=low
 
