--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.184.1) UNRELEASEDquantal; urgency=low
+ubuntu-release-upgrader (1:0.184.1) quantal; urgency=low
 
   *  lp:~mvo/ubuntu-release-upgrader/lp1052605 into lp:ubuntu-release-upgrader:
      - spinning on the dpkg lock for a short while before giving up
