--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.185) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.185) quantal; urgency=low
 
   * Pass the current locale's preferred encoding to bytes.decode(), since
     Python 2 has a silly default.
 
- -- Colin Watson <cjwatson@ubuntu.com>  Tue, 02 Oct 2012 17:52:37 +0100
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 02 Oct 2012 17:53:26 +0100
 
 ubuntu-release-upgrader (1:0.184.1) quantal; urgency=low
 
