--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:0.186) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.186) quantal; urgency=low
 
   * DistUpgradeApport.py: don't use a '/' as a key name in the apport report
     as this will cause an assertion error and prevent any attachments from
     being included (LP: #1060353)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 02 Oct 2012 10:54:41 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 02 Oct 2012 10:57:22 -0700
 
 ubuntu-release-upgrader (1:0.185) quantal; urgency=low
 
