--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.187) UNRELEASED; urgency=low
+
+  * DistUpgradeMain.py: ensure that translations are loaded (LP: #1058102)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 03 Oct 2012 15:45:41 -0700
+
 ubuntu-release-upgrader (1:0.186) quantal; urgency=low
 
   * DistUpgradeApport.py: don't use a '/' as a key name in the apport report
