--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.187) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.187) quantal; urgency=low
 
   * DistUpgradeMain.py: ensure that translations are loaded (LP: #1058102)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 03 Oct 2012 15:45:41 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 03 Oct 2012 16:22:48 -0700
 
 ubuntu-release-upgrader (1:0.186) quantal; urgency=low
 
