--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.189) UNRELEASED; urgency=low
+
+  * debian/ubuntu-release-upgrader-core.preinst: modify prompt to be Prompt on
+    new installs of ubuntu-release-upgrader too since it is a new package in
+    quantal (LP: #1065754)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 11 Oct 2012 16:18:11 -0700
+
 ubuntu-release-upgrader (1:0.188) quantal; urgency=low
 
   * ensure that translations are loaded (LP: #1058102)
