--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:0.189) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.189) quantal-proposed; urgency=low
 
   * debian/ubuntu-release-upgrader-core.preinst: modify prompt to be Prompt on
     new installs of ubuntu-release-upgrader too since it is a new package in
     quantal (LP: #1065754)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 11 Oct 2012 16:18:11 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 11 Oct 2012 16:21:11 -0700
 
 ubuntu-release-upgrader (1:0.188) quantal; urgency=low
 
