--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.190) UNRELEASEDquantal-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - fix crash in "Invalid package information", thanks to Brian Murray
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Oct 2012 18:19:23 +0200
+
 ubuntu-release-upgrader (1:0.189) quantal-proposed; urgency=low
 
   * debian/ubuntu-release-upgrader-core.preinst: modify prompt to be Prompt on
