--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.190) UNRELEASEDquantal-proposed; urgency=low
+ubuntu-release-upgrader (1:0.190) quantal-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
     - fix crash in "Invalid package information", thanks to Brian Murray
