remove "gdm" from KeyDependencies (LP: #1067359)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.190.1) UNRELEASED; urgency=low
+
+  * remove "gdm" from KeyDependencies (LP: #1067359)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Oct 2012 15:53:14 +0200
+
 ubuntu-release-upgrader (1:0.190) quantal-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
