--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.190.2) UNRELEASEDquantal-proposed; urgency=low
+ubuntu-release-upgrader (1:0.190.2) quantal-proposed; urgency=low
 
   * fix unicode releated crash in non-english locales (LP: #1068389)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Oct 2012 09:00:13 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Oct 2012 09:30:36 +0200
 
 ubuntu-release-upgrader (1:0.190.1) quantal-proposed; urgency=low
 
