DistUpgradeApport.py: check to see if --tags is available before trying to use it (LP: #1070043)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:0.190.3) UNRELEASED; urgency=low
 
   * DistUpgrade.ui: allow the conf file dialog to be resizable and set it to a
     larger initial size.  Thanks to Michael Terry for the fix. (LP: #1065806)
+  * DistUpgradeApport.py: check to see if --tags is available before trying to
+    use it (LP: #1070043)
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 19 Oct 2012 10:24:06 -0700
 
