--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-ubuntu-release-upgrader (1:0.190.3) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.190.3) quantal-proposed; urgency=low
 
   * DistUpgrade.ui: allow the conf file dialog to be resizable and set it to a
     larger initial size.  Thanks to Michael Terry for the fix. (LP: #1065806)
   * DistUpgradeApport.py: check to see if --tags is available before trying to
     use it (LP: #1070043)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 19 Oct 2012 10:24:06 -0700
+ -- Brian Murray <brian@ubuntu.com>  Tue, 23 Oct 2012 10:45:58 -0700
 
 ubuntu-release-upgrader (1:0.190.2) quantal-proposed; urgency=low
 
