updated to support raring upgrades

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.191) UNRELEASEDraring; urgency=low
+
+  * updated to support raring upgrades
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 30 Oct 2012 09:33:50 +0100
+
 ubuntu-release-upgrader (1:0.190.3) quantal-proposed; urgency=low
 
   * DistUpgrade.ui: allow the conf file dialog to be resizable and set it to a
