--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-ubuntu-release-upgrader (1:0.191) UNRELEASEDraring; urgency=low
+ubuntu-release-upgrader (1:0.191) raring; urgency=low
 
-  * updated to support raring upgrades
+  * support quantal->raring release upgrades
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 30 Oct 2012 09:33:50 +0100
 
