update all string for quantal->raring upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.191.1) UNRELEASEDraring; urgency=low
+
+  * update all string for quantal->raring upgrade
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Nov 2012 09:44:11 +0100
+
 ubuntu-release-upgrader (1:0.191) raring; urgency=low
 
   * support quantal->raring release upgrades
