--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
-ubuntu-release-upgrader (1:0.191.1) UNRELEASEDraring; urgency=low
+ubuntu-release-upgrader (1:0.191.1) raring-proposed; urgency=low
 
+  [ Michael Vogt ]
   * update all string for quantal->raring upgrade
+
+  [ Brian Murray ]
+  * rewrite sources if using a local mirror without backports (LP: #1067393) 
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Nov 2012 09:44:11 +0100
 
