tests/test_view.py: Use "tee" as pager instead of "less", so that this test also works in an environment without stdout.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.191.2) UNRELEASED; urgency=low
+
+  * tests/test_view.py: Use "tee" as pager instead of "less", so that this
+    test also works in an environment without stdout.
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 09 Nov 2012 13:50:27 +0100
+
 ubuntu-release-upgrader (1:0.191.1) raring-proposed; urgency=low
 
   [ Michael Vogt ]
