whoops, and add changelog entry for do-release-upgrade fix

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.192) UNRELEASED; urgency=low
+
+  * do-release-upgrade:
+    - Fix crasher when not using gtk (LP: #1076186)
+
+ -- Michael Terry <mterry@ubuntu.com>  Tue, 13 Nov 2012 10:18:47 -0500
+
 ubuntu-release-upgrader (1:0.191.2) raring; urgency=low
 
   * tests/test_view.py: Use "tee" as pager instead of "less", so that this
