--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.192) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192) raring; urgency=low
 
   * do-release-upgrade:
     - Fix crasher when not using gtk (LP: #1076186)
