--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.192.1) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192.1) raring; urgency=low
 
   * Resolve an encoding issue when a user responds with non-ascii test in the
     text view (LP: #1071388)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 11 Dec 2012 16:47:31 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 11 Dec 2012 16:49:29 -0800
 
 ubuntu-release-upgrader (1:0.192) raring; urgency=low
 
