--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.193) UNRELEASED; urgency=low
+
+  * Call dpkg using the full path (LP: #1085844)
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 Dec 2012 08:39:56 -0800
+
 ubuntu-release-upgrader (1:0.192.1) raring; urgency=low
 
   * Resolve an encoding issue when a user responds with non-ascii test in the
