--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,10 @@ ubuntu-release-upgrader (1:0.193) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Remove calls to (currently) Python 2-only dh_auto_* (LP: #1089861).
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 13 Dec 2012 08:39:56 -0800
+  [ Michael Vogt ]
+  * fix GObject->GLib deprecation warnings
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 10:03:20 +0100
 
 ubuntu-release-upgrader (1:0.192.1) raring; urgency=low
 
