--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-ubuntu-release-upgrader (1:0.192.2) UNRELEASEDraring; urgency=low
+ubuntu-release-upgrader (1:0.192.3) rarning; urgency=low
+
+  * fix FTBFS if there are no __pycache__ dirs
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 14:29:03 +0100
+
+ubuntu-release-upgrader (1:0.192.2) raring; urgency=low
 
   [ Brian Murray ]
   * Call dpkg using the full path (LP: #1085844)
@@ -12,7 +18,7 @@ ubuntu-release-upgrader (1:0.192.2) UNRELEASEDraring; urgency=low
     - ensure stable component order in sources.list for official
       components, this fixes a ADT failure
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 13:14:06 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 13:29:38 +0100
 
 ubuntu-release-upgrader (1:0.192.1) raring; urgency=low
 
