--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.192.3) rarning; urgency=low
+ubuntu-release-upgrader (1:0.192.3) raring; urgency=low
 
   * fix FTBFS if there are no __pycache__ dirs
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 14:29:03 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Dec 2012 14:44:49 +0100
 
 ubuntu-release-upgrader (1:0.192.2) raring; urgency=low
 
