--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
+
+  * Ensure that partial upgrades are fully translated (LP: #1072828) thanks to
+    Gabor Kelemen for the intial patch.
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 04 Jan 2013 16:36:11 -0800
+
 ubuntu-release-upgrader (1:0.192.3) raring; urgency=low
 
   * fix FTBFS if there are no __pycache__ dirs
