--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
 
   * Ensure that partial upgrades are fully translated (LP: #1072828) thanks to
     Gabor Kelemen for the intial patch.
+  * Remove code enabling apport since it always running (LP: #1068874)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 04 Jan 2013 16:36:11 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 08 Jan 2013 15:04:28 -0800
 
 ubuntu-release-upgrader (1:0.192.3) raring; urgency=low
 
