--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
 
   * Ensure that partial upgrades are fully translated (LP: #1072828) thanks to
-    Gabor Kelemen for the intial patch.
-  * Remove code enabling apport since it always running (LP: #1068874)
+    Gabor Kelemen for the initial patch.
+  * Remove code enabling apport since it is always running (LP: #1068874)
   * check-new-release-gtk: set the correct translation domain thanks to Gabor
     Kelemen for patch (LP: #1093697)
 
