DistUpgradeController.py: call apport-bug with the binary package name not the source package name (LP: #1098001)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
   * Remove code enabling apport since it is always running (LP: #1068874)
   * check-new-release-gtk: set the correct translation domain thanks to Gabor
     Kelemen for patch (LP: #1093697)
+  * DistUpgradeController.py: call apport-bug with the binary package name not
+    the source package name (LP: #1098001)
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 08 Jan 2013 15:04:28 -0800
 
