source_ubuntu-release-upgrader.py: set the crash database to Ubuntu to allow reporting of bugs even if the package does not seem to be official (LP: #1067542)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
     Kelemen for patch (LP: #1093697)
   * DistUpgradeController.py: call apport-bug with the binary package name not
     the source package name (LP: #1098001)
+  * source_ubuntu-release-upgrader.py: set the crash database to Ubuntu to
+    allow reporting of bugs even if the package does not seem to be official
+    (LP: #1067542)
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 08 Jan 2013 15:04:28 -0800
 
