--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192.4) raring; urgency=low
 
   * Ensure that partial upgrades are fully translated (LP: #1072828) thanks to
     Gabor Kelemen for the initial patch.
@@ -11,7 +11,7 @@ ubuntu-release-upgrader (1:0.192.4) UNRELEASED; urgency=low
     allow reporting of bugs even if the package does not seem to be official
     (LP: #1067542)
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 08 Jan 2013 15:04:28 -0800
+ -- Brian Murray <brian@ubuntu.com>  Fri, 11 Jan 2013 16:19:26 -0800
 
 ubuntu-release-upgrader (1:0.192.3) raring; urgency=low
 
