--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.192.5) raring; urgency=low
+
+  * Fix a couple path joins and bugs that prevented check-new-release-gtk
+    from working.  (LP: #1094777)
+
+ -- Michael Terry <mterry@ubuntu.com>  Tue, 22 Jan 2013 09:46:57 -0500
+
 ubuntu-release-upgrader (1:0.192.4) raring; urgency=low
 
   * Ensure that partial upgrades are fully translated (LP: #1072828) thanks to
