No change rebuild to regenerate DevelReleaseAnnouncement.html

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.192.6) raring; urgency=low
+
+  * No change rebuild to regenerate DevelReleaseAnnouncement.html
+
+ -- Michael Terry <mterry@ubuntu.com>  Mon, 18 Mar 2013 13:23:37 -0400
+
 ubuntu-release-upgrader (1:0.192.5) raring; urgency=low
 
   * Fix a couple path joins and bugs that prevented check-new-release-gtk
