--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.192.7) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192.7) raring; urgency=low
 
   * in doPostInitialUpdate return false if there is no cache (LP: #1127451)
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2013 14:19:33 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2013 14:23:32 -0700
 
 ubuntu-release-upgrader (1:0.192.6) raring; urgency=low
 
