use correct argument for frontend in kubuntu-devel-release-upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.192.8) UNRELEASED; urgency=low
+
+  * Use correct argument for frontend in kubuntu-devel-release-upgrade
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 09 Apr 2013 12:48:28 +0100
+
 ubuntu-release-upgrader (1:0.192.7) raring; urgency=low
 
   * in doPostInitialUpdate return false if there is no cache (LP: #1127451)
