--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.192.8) UNRELEASED; urgency=low
+
+  * fallback to UTF-8 if getdefaultlocale returns None (LP: #1166346)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 10 Apr 2013 10:48:09 -0700
+
 ubuntu-release-upgrader (1:0.192.7) raring; urgency=low
 
   * in doPostInitialUpdate return false if there is no cache (LP: #1127451)
