--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,19 @@
-ubuntu-release-upgrader (1:0.192.8) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192.9) UNRELEASED; urgency=low
+
+  [ Barry Warsaw ]
+  * Fix UnboundLocalError caused by corner case in the Python 3 language
+    spec.  LP: #1102593
+
+  [ Jonathan Riddell ]
+  * Use correct argument for frontend in kubuntu-devel-release-upgrade
+
+ -- Barry Warsaw <barry@ubuntu.com>  Thu, 18 Apr 2013 13:36:32 -0400
+
+ubuntu-release-upgrader (1:0.192.8) raring; urgency=low
 
   * fallback to UTF-8 if getdefaultlocale returns None (LP: #1166346)
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 10 Apr 2013 10:48:09 -0700
+ -- Brian Murray <brian@ubuntu.com>  Wed, 10 Apr 2013 10:49:50 -0700
 
 ubuntu-release-upgrader (1:0.192.7) raring; urgency=low
 
