Remove cups-pdf from ForcedObsoletes in DistUpgrade.cfg (LP: #457221)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ ubuntu-release-upgrader (1:0.192.9) UNRELEASED; urgency=low
   [ Jonathan Riddell ]
   * Use correct argument for frontend in kubuntu-devel-release-upgrade
 
+  [ Brian Murray ]
+  * Remove cups-pdf from ForcedObsoletes in DistUpgrade.cfg (LP: #457221)
+
  -- Barry Warsaw <barry@ubuntu.com>  Thu, 18 Apr 2013 13:36:32 -0400
 
 ubuntu-release-upgrader (1:0.192.8) raring; urgency=low
