--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.192.9) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192.9) raring; urgency=low
 
   [ Barry Warsaw ]
   * Fix UnboundLocalError caused by corner case in the Python 3 language
-    spec.  LP: #1102593
+    spec. (LP: #1102593)
 
   [ Jonathan Riddell ]
   * Use correct argument for frontend in kubuntu-devel-release-upgrade
@@ -10,7 +10,7 @@ ubuntu-release-upgrader (1:0.192.9) UNRELEASED; urgency=low
   [ Brian Murray ]
   * Remove cups-pdf from ForcedObsoletes in DistUpgrade.cfg (LP: #457221)
 
- -- Barry Warsaw <barry@ubuntu.com>  Thu, 18 Apr 2013 13:36:32 -0400
+ -- Brian Murray <brian@ubuntu.com>  Thu, 18 Apr 2013 13:10:08 -0700
 
 ubuntu-release-upgrader (1:0.192.8) raring; urgency=low
 
