--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.192.10) UNRELEASED; urgency=low
+
+  * Add in Ubuntu.mirrors from python-apt-common (LP: #1069745)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 19 Apr 2013 08:16:37 -0700
+
 ubuntu-release-upgrader (1:0.192.9) raring; urgency=low
 
   [ Barry Warsaw ]
