--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ubuntu-release-upgrader (1:0.192.10) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.192.10) raring; urgency=low
 
-  * Add in Ubuntu.mirrors from python-apt-common (LP: #1069745)
+  * Add in Ubuntu.mirrors from python-apt-common for the release upgrader
+    (LP: #1069745)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 19 Apr 2013 08:16:37 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 19 Apr 2013 08:18:15 -0700
 
 ubuntu-release-upgrader (1:0.192.9) raring; urgency=low
 
