support raring->saucy release upgrades

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.193) UNRELEASED; urgency=low
+
+  * support raring->saucy release upgrades
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 29 Apr 2013 12:21:46 -0700
+
 ubuntu-release-upgrader (1:0.192.10) raring; urgency=low
 
   * Add in Ubuntu.mirrors from python-apt-common for the release upgrader
