--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-release-upgrader (1:0.193) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.193) saucy; urgency=low
 
   * support raring->saucy release upgrades
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 29 Apr 2013 12:21:46 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 29 Apr 2013 13:36:33 -0700
 
 ubuntu-release-upgrader (1:0.192.10) raring; urgency=low
 
