support raring->saucy release upgrades harder

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.194) saucy; urgency=low
+
+  * support raring->saucy release upgrades harder
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Tue, 30 Apr 2013 11:43:32 -0600
+
 ubuntu-release-upgrader (1:0.193) saucy; urgency=low
 
   * support raring->saucy release upgrades
