* debian/release-upgrade-motd: LP: #1173209   - recheck release upgrade once-a-day, even if stamp file is     already populated   - this partially fixes the sticky "upgrade available" message,     after successfully upgrading, even if the stamp is not removed

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
+
+  * debian/release-upgrade-motd: LP: #1173209
+    - recheck release upgrade once-a-day, even if stamp file is
+      already populated
+    - this partially fixes the sticky "upgrade available" message,
+      after successfully upgrading, even if the stamp is not removed
+
+ -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 07 May 2013 10:37:12 -0500
+
 ubuntu-release-upgrader (1:0.194) saucy; urgency=low
 
   * support raring->saucy release upgrades harder
