* DistUpgrade/DistUpgradeController.py: LP: #1173209   - remove the upgrade-available flag, on upgrade completion

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
       already populated
     - this partially fixes the sticky "upgrade available" message,
       after successfully upgrading, even if the stamp is not removed
+  * DistUpgrade/DistUpgradeController.py: LP: #1173209
+    - remove the upgrade-available flag, on upgrade completion
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 07 May 2013 10:37:12 -0500
 
