* debian/ubuntu-release-upgrader-core.postinst: LP: #1173209   - clear the upgrade-available flag, on postinst; it will automatically     repopulate, if necessary

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
       after successfully upgrading, even if the stamp is not removed
   * DistUpgrade/DistUpgradeController.py: LP: #1173209
     - remove the upgrade-available flag, on upgrade completion
+  * debian/ubuntu-release-upgrader-core.postinst: LP: #1173209
+    - clear the upgrade-available flag, on postinst; it will automatically
+      repopulate, if necessary
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 07 May 2013 10:37:12 -0500
 
