DistUpgradeCache.py: encode error message as UTF-8 (LP: #1177821)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
 
+  [ Dustin Kirkland ]
   * debian/release-upgrade-motd: LP: #1173209
     - recheck release upgrade once-a-day, even if stamp file is
       already populated
@@ -10,6 +11,9 @@ ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
   * debian/ubuntu-release-upgrader-core.postinst: LP: #1173209
     - clear the upgrade-available flag, on postinst; it will automatically
       repopulate, if necessary
+
+  [ Brian Murray ]
+  * DistUpgradeCache.py: encode error message as UTF-8 (LP: #1177821) 
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 07 May 2013 10:37:12 -0500
 
