DistUpgradeCache.py: double size estimate need in boot (LP: #1173468)

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,8 @@ ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
       repopulate, if necessary
 
   [ Brian Murray ]
-  * DistUpgradeCache.py: encode error message as UTF-8 (LP: #1177821) 
+  * DistUpgradeCache.py: encode error message as UTF-8 (LP: #1177821)
+  * DistUpgradeCache.py: double size estimate need in boot (LP: #1173468)
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 07 May 2013 10:37:12 -0500
 
