--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.195) saucy; urgency=low
 
   [ Dustin Kirkland ]
   * debian/release-upgrade-motd: LP: #1173209
@@ -16,7 +16,7 @@ ubuntu-release-upgrader (1:0.195) UNRELEASED; urgency=low
   * DistUpgradeCache.py: encode error message as UTF-8 (LP: #1177821)
   * DistUpgradeCache.py: double size estimate need in boot (LP: #1173468)
 
- -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 07 May 2013 10:37:12 -0500
+ -- Brian Murray <brian@ubuntu.com>  Fri, 17 May 2013 09:09:01 -0700
 
 ubuntu-release-upgrader (1:0.194) saucy; urgency=low
 
