--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.196) UNRELEASED; urgency=low
+ubuntu-release-upgrader (1:0.196) saucy; urgency=low
 
   * Re-sync the local copy of invoke-rc.d with the one from sysvinit.
     Patch still applies cleanly. (LP: #1185364)
 
- -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 29 May 2013 11:15:14 -0400
+ -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 29 May 2013 11:16:20 -0400
 
 ubuntu-release-upgrader (1:0.195) saucy; urgency=low
 
